# Design_Patterns_CPP

./: .gitignore  .gitmodules  README.md
OpenClosedPrinciple/: CMakeLists.txt  main.cpp
SingleResponsPrinciple/: CMakeLists.txt  CMakePresets.json  main.cpp
